--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>corinthians</title>
 </head>
 <body>
-    <p> corinthias e melhor </p>
+<header>corinthians e time da fiel</header>
+<h1>corinthians</h1>
+<p>corinthians tem um torcida muito barulhenta nasceu no ano de 1910 e e de sp</p>
 </body>
 </html>
